[metadata]
name = pytest-launchable
author = Launchable, Inc.
author_email = info@launchableinc.com
license = Apache Software License v2
description = Launchable Pytest Plugin
url = https://launchableinc.com/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Framework :: Pytest

[options]
python_requires = >=3.7
packages = find:
install_requires =
    pytest>=4.2.0
    lxml
    pyyaml
    launchable
setup_requires =
    setuptools-scm

[options.entry_points]
pytest11 = 
    launchable = pytest_launchable.conftest
console_scripts =
    launchable-testrunner-config = launchable_testrunner_config.__main__:main